use valueOf instead of constructor